--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gsap": "^3.7.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.130.1",
